--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-.birthday_table
+/data/.birthday_table
+/data/.size_table
 .bot_config
-.size_table
 .idea/vcs.xml
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/misc.xml
